<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_ndt_map</name>
  <version>0.0.0</version>
  <description>Contains the definitions of the 3D Normal Distributions Transform data structures, 
     used for mapping, registration, etc.</description>
  <maintainer email="jan.weber@hs-bochum.de">jan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs </depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>nav2_msgs </depend>

  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
